# n-body_problem

./: CMakeLists.txt  README.md  armageddon.plt  armageddon3.plt  armageddon4.plt  main.cpp  num_int.hh  num_int.txt  rk4.hh  state.hh  vector.hh  vector2.hh  vector3.hh
Tests/: vector3_add.cpp  vector3_divscl.cpp  vector3_func.cpp  vector3_mulscl.cpp  vector3_sub.cpp  vector_add.cpp  vector_co.cpp  vector_divscl.cpp  vector_func.cpp  vector_mulscl.cpp  vector_sub.cpp
